# cmake_template

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  config.h  config.h.in  readme.md
config/: README.md  user_config.ini
output/: .gitignore  README.md
scripts/: README.md
src/apl/: README.md  main.c
src/fml/: README.md
src/hal/: README.md
src/hdl/: README.md
tests/: README.md
